// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a table with control buttons 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell headerControlCell"
        >
          <span>
            <span
              aria-hidden="true"
              class="fa fa-pencil"
            />
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell controlCell"
        >
          <button>
            <span
              aria-hidden="true"
              class="fa fa-pencil"
            />
          </button>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render an empty table 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
  <div
    class="tablePlaceholderArea"
  >
    <span
      aria-hidden="true"
      class="tablePlaceholderIcon fa fa-battery-quarter"
    />
    <div
      class="tablePlaceholderText"
    >
      No entries
    </div>
  </div>
</div>
`;

exports[`Render the Table component 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in multiple selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <span>
            <span
              class="checkbox light"
            >
              <input
                type="checkbox"
              />
              <span />
            </span>
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell small"
        >
          <span
            class="checkbox dark"
          >
            <input
              type="checkbox"
            />
            <span />
          </span>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render the Table component in single selection mode 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr
        class="row"
      >
        <th
          class="headerCell"
        >
          <span />
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
        <th
          class="headerCell"
        >
          <span>
            Column Title
          </span>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell small"
        >
          <label
            class="radio dark"
          >
            <span
              class="customRadioContainer"
            >
              <input
                type="radio"
              />
              <span
                class="customRadio"
              />
            </span>
          </label>
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
        <td
          class="cell"
        >
          Column Text
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
